# CheonAn_Firebase_Rev3

./: .env.example  .eslintignore  .gitignore  Q.A.txt  QA.txt  QA2.txt  README.md  blueprint.md  database.json  eslint.config.js  export_for_ai.py  extract_source.py  install.bat  inventory.py  metadata.json  nodemon.json  package-lock.json  package.json  revision_history.md  server.ts  tsconfig.json  tsconfig.node.json  tsconfig.server.json
.idx/: dev.nix
public/: database.json
server/: index.ts
services/: geminiService.ts
src/: App.tsx  constants.ts  fix_icons.cjs  fix_win_icons.cjs  index.css  initialData.ts  initialTransactions.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/App/: TauriApp.tsx  WebApp.tsx
src/components/: AIAdvisor.tsx  ComboBox.tsx  ConfirmationModal.tsx  Dashboard.tsx  DataMigrationModal.tsx  ExcelImport.tsx  InventoryList.tsx  LabelSettingsModal.tsx  LoadingFallback.tsx  Login.tsx  ManualModal.tsx  MasterDataManagerModal.tsx  MonthlyReportModal.tsx  ReportModal.tsx  SourceDownloadModal.tsx  StockForm.tsx  TransactionHistoryImport.tsx  TransactionModal.tsx  UserManagerModal.tsx
src/components/ExcelImport/: AnalysisModal.tsx  Step1_Upload.tsx  Step2_Mapping.tsx  Step3_Review.tsx  utils.ts
src/components/InventoryList/: InventoryModals.tsx  InventoryTable.tsx  InventoryToolbar.tsx
src/services/: geminiService.ts
src/utils/: logger.ts  sortInventory.ts
temp/: App.tsx.bak  index.html.bak  index.tsx.bak
utils/: sourceExporter.ts
(+36 files in other folders)
